C2LC-590: Fix an issue with interaction styles of loop blocks in the high contrast theme

--- a/src/Themes.scss
+++ b/src/Themes.scss
@@ -2022,7 +2022,9 @@ body.contrast-theme {
             outline: #FFFFFF solid 0.2rem;
         }
         &:hover {
-            border: 0.2rem solid #FFFFFF;
+            padding: 0.1rem;
+            border: 0.1rem solid #FFFFFF;
+            outline: #FFFFFF solid 0.1rem;
             background-color: black;
             .command-block-loop-label-container {
                 background-color: black;
